@@ -23,10 +23,10 @@
     %ul
       %li
         %span.label.label-success shared
-        \- run any builds
+        \- run builds from all unassigned projects
       %li
         %span.label.label-info specific
-        \- run only builds from assigned projects
+        \- run builds from assigned projects
 
 
 
