@@ -1,0 +1,5 @@
+.alert.alert-danger
+  %p
+    There are NO runners to build this project. Consider assigning this project to a
+    %span.label.label-info specific
+    one or add the new runner.
