@@ -1,0 +1,6 @@
+.alert.alert-info
+  %p
+    This project uses a
+    %span.label.label-info specific
+    runner.
+    Builds will be run only by #{runners_for_project(@project)}.
