@@ -1,1 +1,2 @@
+= render 'info'
 = render 'form'
