@@ -6,6 +6,7 @@ v5.4
   - Fix schedule_builds rake task
   - Fix test webhook button
   - Job can be branch specific or tag specifi or both
+  - Shared runners builds projects which are not assigned to specific ones
 
 v5.3
   - Remove annoying 'Done' message from schedule_builds cron job
